--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
     <h1>Hello Git</h1>
     <h1>modify</h1>
     <header>Header Text</header>
+    <div class="slider">
+        <h1>Slide One</h1>
+        <h1>Slide Two</h1>
+    </div>
 </body>
 </html>
