--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="slider">
         <h1>Slide One</h1>
         <h1>Slide Two</h1>
+        <h1>Slide three</h1>
     </div>
     <footer>
         Footer
