--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Hello Git</h1>
     <h1>modify</h1>
     <header>Header Text</header>
+    <span>dev branch</span>
     <div class="slider">
         <h1>Slide One</h1>
         <h1>Slide Two</h1>
