--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<banner class="banner">
+    <img src="" alt="">
+</banner>
 <body>
     <h1>Hello Git</h1>
     <h1>modify</h1>
