--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <h1>Hello Git</h1>
     <h1>modify</h1>
     <header>Header Text</header>
-    <span>dev branch</span>
+    <span>develop branch</span>
     <div class="slider">
         <h1>Slide One</h1>
         <h1>Slide Two</h1>
         <h1>Slide three</h1>
     </div>
     <footer>
-        Footer
+        Footer copyright 2023
     </footer>
     <script src="./script.js"></script>
 </body>
