added slide four

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 </banner>
 <body>
     <h1>Hello Git</h1>
-    <header>Header Text</header>
+    <header>Header Text</head
     <span>develop branch</span>
     <span>my new branch</span>
     <div class="slider">
         <h1>Slide One</h1>
         <h1>Slide Two</h1>
         <h1>Slide three</h1>
+        <h1>Slide four</h1>
     </div>
     <footer>
         Footer copyright 2023
